Испр. документации и поведения API
